--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h1>CLICK THE LINKS TO SEE TWO BEARS I REALLY LIKE</h1>
-		<a href="polar.jpg">POLAR</a>
-		<a href="panda.jpg">PANDA</a>		
+		<a href="Pages/polar.jpg">POLAR</a>
+		<a href="Pages/panda.jpg">PANDA</a>		
 	</body>
 </html>
