--- a/Pages/panda.html
+++ b/Pages/panda.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>BEARS I LIKE</title>
+        <head>
+	        <title>BEARS I LIKE</title>
 	</head>
 	<body>
-		<h1>Panda BEAR</h1>
+	        <h1>Panda BEAR</h1>
 		<p>I think panda bears are cool.</p>
-		<img src="panda.jpg"> 		
+		<img src="Bears\Resources\panda.jpg" width=auto height=200px> 		
 	</body>
 </html>
