--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>BEARS I LIKE</title>
+		<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="stylesheet"
 	</head>
 	<body>
 		<h1>CLICK THE LINKS TO SEE TWO BEARS I REALLY LIKE</h1>
