--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>BEARS I LIKE</title>
 		<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="stylesheet"
+		<link rel="stylesheet" type="text/css" href="stylesheet">
 	</head>
 	<body>
 		<h1>CLICK THE LINKS TO SEE TWO BEARS I REALLY LIKE</h1>
