--- a/Pages/panda.html
+++ b/Pages/panda.html
@@ -2,10 +2,12 @@
 <html>
         <head>
 	        <title>BEARS I LIKE</title>
+		<link rel="stylesheet" type="text/css" href="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 	</head>
 	<body>
 	        <h1>Panda BEAR</h1>
 		<p>I think panda bears are cool.</p>
-		<img src="Bears\Resources\panda.jpg" width=auto height=200px> 		
+		<img src="\Bears\Resources\panda.jpg" width=auto height=200px> 		
 	</body>
 </html>
