--- a/Pages/polar.html
+++ b/Pages/polar.html
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<title>BEARS I LIKE</title>
+		<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="stylesheet">
 	</head>
 	<body>
 		<h1>POLAR BEAR</h1>
 		<p>I think polar bears are cool.</p>
-		<img src="polar.jpg"> 		
+		<img src="\Bears\Resources\polar.jpg" width=200px height=auto> 		
 	</body>
 </html>
