--- a/Pages/panda.html
+++ b/Pages/panda.html
@@ -2,7 +2,7 @@
 <html>
         <head>
 	        <title>BEARS I LIKE</title>
-		<link rel="stylesheet" type="text/css" href="stylesheet">
+		<link rel="stylesheet" type="text/css" href="Pages/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 	</head>
 	<body>
